Fixing sidebar social media alignmnet

--- a/css/style.css
+++ b/css/style.css
@@ -8479,7 +8479,7 @@ aside .newsletter #mc_embed_signup input[type="checkbox"] {
   background: white;
 }
 .section-amc .sp-social-buttons.amc {
-  margin-top: 60px;
+  margin-top: 20px;
 }
 .section-amc .sp-social-buttons.amc a {
   background: #25408f;
