--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -366,7 +366,7 @@ aside .newsletter{
 }
 
 .section-amc .sp-social-buttons.amc{
-  margin-top:60px;
+  margin-top:20px;
     a{
       background: #25408f;
     }
